# AutoROIdetection

./: .gitignore  CMakeLists.txt  README.md  example.txt  in_proposal.xml  main.cpp
Debug/: AutoROIdetection
python/: run_test.py
src/: cameraParams.cpp  cameraParams.hpp  generalParams.cpp  generalParams.hpp  main.cpp  undistort.cpp  undistort.hpp
